--- a/style.css
+++ b/style.css
@@ -722,7 +722,7 @@ main{
 .contact{
     /* margin-top: 5vmin; */
     width: 100%;
-    background: url(/images/bg.jpg) no-repeat center;
+    background: url(images/bg.jpg) no-repeat center;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -1071,7 +1071,7 @@ main{
     width: 100%;
     display: flex;
     align-items: center;
-    background: url(/images/bg.jpg) no-repeat center;
+    background: url(images/bg.jpg) no-repeat center;
     background-size: cover;
     overflow: hidden;
 }
@@ -1240,7 +1240,7 @@ main{
     display: flex;
     justify-content: right;
     align-items: center;
-    background: url(/images/bg.jpg) no-repeat center;
+    background: url(images/bg.jpg) no-repeat center;
     background-size: cover;
     overflow: hidden;
 }
