--- a/style.css
+++ b/style.css
@@ -634,6 +634,7 @@ main{
     row-gap: 4vmin;
     column-gap: 4vmin;
     justify-items: center;
+    overflow: hidden;
 }
 .r {
     position: relative;
