--- a/style.css
+++ b/style.css
@@ -1407,7 +1407,7 @@ footer{
 }
 .copy{
     margin-top: 20px;
-    width: 190px;
+    width: 100%;
     height: 40px;
     display: flex;
     flex-direction: column;
@@ -1425,6 +1425,14 @@ footer{
     color: white;
     font-weight: 50;
 
+}
+.copy a{
+    color: white;
+}
+.copy a:hover{
+    transition-duration: .2s;
+    transition-timing-function: ease;
+    color:rgb(235,113,88);
 }
 #icons{
     display: flex;
